ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Items__c/CnP_PaaS__Invoice_Items__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Invoice Items</label>
    <nameField>
        <label>Invoice Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>