ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Items__c/fields/CnP_PaaS__Discount__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>