ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Items__c/fields/CnP_PaaS__Item_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Item_Campaign__c</fullName>
    <label>Item Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>