ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Items__c/fields/CnP_PaaS__Item_Price__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Item_Price__c</fullName>
    <label>Item Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>