ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Items__c/fields/CnP_PaaS__ItemCampaign__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__ItemCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ItemCampaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>C&amp;P Invoice Items</relationshipLabel>
    <relationshipName>CnP_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>