ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Items__c/fields/CnP_PaaS__Quantity__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>