ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Items__c/fields/CnP_PaaS__Temp_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Temp_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Invoice</label>
    <referenceTo>CnP_PaaS__Invoice__c</referenceTo>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>